Create User, UserRole
CRUD  User , UserRole

--- a/MatRoleClaim/MatRoleClaim.csproj
+++ b/MatRoleClaim/MatRoleClaim.csproj
@@ -316,6 +316,7 @@
     <Content Include="Views\Blogs\Edit.cshtml" />
     <Content Include="Views\Blogs\Index.cshtml" />
     <Content Include="Views\Home\Blog.cshtml" />
+    <Content Include="Views\UserRoles\ManageAccount.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
