--- a/MatRoleClaim/MatRoleClaim.csproj
+++ b/MatRoleClaim/MatRoleClaim.csproj
@@ -190,8 +190,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
-    <Compile Include="Controllers\CourceCategoriesController.cs" />
-    <Compile Include="Controllers\CourcesController.cs" />
+    <Compile Include="Controllers\CourseCategoriesController.cs" />
+    <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RoleClaimsController.cs" />
@@ -201,14 +201,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202109050342239_init.cs" />
-    <Compile Include="Migrations\202109050342239_init.Designer.cs">
-      <DependentUpon>202109050342239_init.cs</DependentUpon>
+    <Compile Include="Migrations\202109050455052_init.cs" />
+    <Compile Include="Migrations\202109050455052_init.Designer.cs">
+      <DependentUpon>202109050455052_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
-    <Compile Include="Models\Cource.cs" />
-    <Compile Include="Models\CourceCategory.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\CourseCategory.cs" />
     <Compile Include="Models\IdentityModels\ApplicationClaim.cs" />
     <Compile Include="Models\IdentityModels\ApplicationRole.cs" />
     <Compile Include="Models\IdentityModels\ApplicationUser.cs" />
@@ -315,16 +315,16 @@
     <Content Include="Views\UserRoles\Edit.cshtml" />
     <Content Include="Views\UserRoles\Index.cshtml" />
     <Content Include="Views\UserRoles\ManageAccount.cshtml" />
-    <Content Include="Views\CourceCategories\Create.cshtml" />
-    <Content Include="Views\CourceCategories\Delete.cshtml" />
-    <Content Include="Views\CourceCategories\Details.cshtml" />
-    <Content Include="Views\CourceCategories\Edit.cshtml" />
-    <Content Include="Views\CourceCategories\Index.cshtml" />
-    <Content Include="Views\Cources\Create.cshtml" />
-    <Content Include="Views\Cources\Delete.cshtml" />
-    <Content Include="Views\Cources\Details.cshtml" />
-    <Content Include="Views\Cources\Edit.cshtml" />
-    <Content Include="Views\Cources\Index.cshtml" />
+    <Content Include="Views\CourseCategories\Create.cshtml" />
+    <Content Include="Views\CourseCategories\Delete.cshtml" />
+    <Content Include="Views\CourseCategories\Details.cshtml" />
+    <Content Include="Views\CourseCategories\Edit.cshtml" />
+    <Content Include="Views\CourseCategories\Index.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
+    <Content Include="Views\Courses\Delete.cshtml" />
+    <Content Include="Views\Courses\Details.cshtml" />
+    <Content Include="Views\Courses\Edit.cshtml" />
+    <Content Include="Views\Courses\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -354,8 +354,8 @@
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202109050342239_init.resx">
-      <DependentUpon>202109050342239_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202109050455052_init.resx">
+      <DependentUpon>202109050455052_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
