Update tbl user

--- a/MatRoleClaim/MatRoleClaim.csproj
+++ b/MatRoleClaim/MatRoleClaim.csproj
@@ -205,6 +205,10 @@
     <Compile Include="Migrations\202109050455052_init.Designer.cs">
       <DependentUpon>202109050455052_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109061316379_update_tbl_User.cs" />
+    <Compile Include="Migrations\202109061316379_update_tbl_User.Designer.cs">
+      <DependentUpon>202109061316379_update_tbl_User.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Course.cs" />
@@ -356,6 +360,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202109050455052_init.resx">
       <DependentUpon>202109050455052_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109061316379_update_tbl_User.resx">
+      <DependentUpon>202109061316379_update_tbl_User.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
