--- a/MatRoleClaim/MatRoleClaim.csproj
+++ b/MatRoleClaim/MatRoleClaim.csproj
@@ -325,6 +325,7 @@
     <Content Include="Views\Courses\Details.cshtml" />
     <Content Include="Views\Courses\Edit.cshtml" />
     <Content Include="Views\Courses\Index.cshtml" />
+    <Content Include="Views\Manage\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
